# cide.py

./: .gitignore  README.md  index.html  python_packages.req  results100.txt  results1000.txt  unix_packages.req
benchmarks/: benchmarks.py  log_benchmarks90go.txt  results.txt  results026-10000.txt  results676-100--noLogNoMutex.txt  results676-100.txt
benchmarks/archives/: results-100F-100U--old.txt  results-100F-100U--old2.txt  results-100F-100U.txt  results-26F-26U.txt  results-50F-50U.txt  results-676F-676U.txt
benchmarks/temp/: aa.py
benchmarks/temp/code/: aa.py
doc/: README
presentations/: cide_FR.pptx
scripts/: demo.sh  generate_configs.sh  generate_project_config.sh  install_so.sh  t.sh
src/app/: core.py
src/app/c++/: Ajout.h  CMakeLists.txt  Fichier.h  Modification.h  PaquetModifications.h  SFichier.h  Suppression.h  Types.h  ZoneTransit.cpp  ZoneTransit.cxx  ZoneTransit.h
src/app/python/: chat.py  core.py  identifier.py  identify.py
src/preprocessor/: compile.py  style.scss
src/server/: authController.py  chatController.py  ideController.py  identifyController.py  index.py  welcomeController.py
src/static/: basic_demo.js  edit_test.js  js.js  test.html
src/static/css/: style.css
src/static/js/: edit.js
src/templates/: basic_demo.html  edit.html  edit_test.html  login.html
tests/: README  runner.py  test_Ajout.py  test_Fichier.py  test_Suppression.py  test_ZoneTransit.py  test_yay.py
tests/app/: test_ZoneTransit.py
tests/python/: runner.py  tests.req
tests/python/app/: test_AddsInZone.py  test_Ajout.py  test_Fichier.py  test_ModifsInZone.py  test_Suppression.py  test_ZoneTransit.py
tests/python/server/: test_chatController.py
tests/server/: test_ideController.py
tests/web/: README  runner.html
tests/web/tests/: test_Display.js  test_Helper.js  test_LastVersionZone.js  test_LocalChanges.js
(+12 files in other folders)
